--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/fitness"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/fitness"
+        android:roundIcon="@drawable/fitness"
         android:supportsRtl="true"
         android:theme="@style/Theme.FitnessTimer">
         <activity android:name=".schedule"></activity>
